k8s/rails.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: railslation
  name: rails
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: gcr.io/railslation/railslation:latest
        imagePullPolicy: Always
        args: ["rails server -b 0.0.0.0 -p 3000"]
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health_check/healthcheck
            port: 3000
          timeoutSeconds: 5
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health_check/healthcheck
            port: 3000
          timeoutSeconds: 5
          initialDelaySeconds: 10
          periodSeconds: 30
