k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: railslation
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
