k8s/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: railslation
  name: sidekiq
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
      - name: sidekiq
        image: gcr.io/railslation/railslation:latest
        imagePullPolicy: Always
        args: ["sidekiq -C config/sidekiq.yml"]
        ports:
        - containerPort: 3000
