k8s/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: railslation
  name: rails-service
spec:
  type: ClusterIP
  selector:
    app: rails
  ports:
    - port: 3000
      targetPort: 3000
