k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: railslation
  name: redis-service
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
